src/test/deca/context/invalid/with_object/assign_compatible_mother.deca
class Animal{
    int x, y;
}

class Cow extends Animal{
    int weight;
}

{
    Cow cow =  new Animal();
}